# HaskellAssignments

./: README.md
assgn1_scanner/: Ass2016x01.cabal
assgn1_scanner/src/: Main.hs  Main.hs~  Scanner.hs  Scanner.hs~  computeExpr.hs~  evalExpr.hs~  testcases.txt
assgn2_parser/: Ass2015x02.cabal
assgn2_parser/Ass02/src/: CST.hs  Parser.hs
assgn2_parser/src/: CST.hs  Main.hs  Parser.hs  Scanner.hs
assgn3_interpreter/: Ass2016x03.cabal
assgn3_interpreter/src/: Lambda.hs  Main.hs  Scanner.hs
assgn3_interpreter/src/tests/: P2_square.el  test.el  workingExample.el
assgn3_interpreter/tests/: P1_xOr.el  P3_sumSquares.el  P4_fact.el  P5_isDivisor.el  P6_isPrime.el
