name:           Ass2015x02
version:        0.1
cabal-version:  >=1.2
build-type:     Simple
author:         hp

executable Ass2015x02
  hs-source-dirs:  src
  main-is:         Main.hs
  build-depends:   base >= 4
  ghc-options:     -Wall
  other-modules:   
                   Parser,
                   CST

